--- a/sbin/ping/ping.8
+++ b/sbin/ping/ping.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ping.8,v 1.23 2000/09/26 14:48:22 aaron Exp $
+.\"	$OpenBSD: ping.8,v 1.24 2001/06/23 21:07:14 pvalchev Exp $
 .\"	$NetBSD: ping.8,v 1.10 1995/12/31 04:55:35 ghudson Exp $
 .\"
 .\" Copyright (c) 1985, 1991, 1993
@@ -44,7 +44,7 @@
 packets to network hosts
 .Sh SYNOPSIS
 .Nm ping
-.Op Fl dfLnqRrv
+.Op Fl DdfLnqRrv
 .Op Fl c Ar count
 .Op Fl I Ar ifaddr
 .Op Fl i Ar wait
