--- a/usr.bin/nm/nm.1
+++ b/usr.bin/nm/nm.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nm.1,v 1.9 2001/06/20 22:32:53 millert Exp $
+.\"	$OpenBSD: nm.1,v 1.10 2001/06/23 21:54:51 fgsch Exp $
 .\"	$NetBSD: nm.1,v 1.3 1995/08/31 23:41:58 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -103,6 +103,8 @@ bss segment symbol
 common symbol
 .It Li D
 data segment symbol
+.It Li I
+indirect reference (alias to other symbol)
 .It Li f
 file name
 .It Li T
