--- a/usr.bin/telnet/telnet.1
+++ b/usr.bin/telnet/telnet.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: telnet.1,v 1.27 2000/11/09 17:52:41 aaron Exp $
+.\"	$OpenBSD: telnet.1,v 1.28 2001/06/23 22:14:27 hin Exp $
 .\"	$NetBSD: telnet.1,v 1.5 1996/02/28 21:04:12 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1993
@@ -84,7 +84,7 @@ option on both input and output.
 .It Fl E
 Stops any character from being recognized as an escape character.
 .It Fl F
-If Kerberos V5 authentication is being used, the
+If Kerberos 5 authentication is being used, the
 .Fl F
 option allows the local credentials to be forwarded
 to the remote system, including any credentials that
@@ -143,7 +143,7 @@ If
 is omitted, then
 there will be no escape character.
 .It Fl f
-If Kerberos V5 authentication is being used, the
+If Kerberos 5 authentication is being used, the
 .Fl f
 option allows the local credentials to be forwarded to the remote system.
 .It Fl k Ar realm
@@ -186,7 +186,7 @@ unless modified by the
 .Fl e
 option.
 .It Fl x
-Turns on encryption of the data stream if possible.
+Turns on encryption of the data stream if Kerberos is used.
 .It Ar host
 Indicates the official name, an alias, or the Internet address
 of a remote host.
@@ -356,7 +356,7 @@ The
 .Ic encrypt
 command manipulates the information sent through the
 .Dv TELNET ENCRYPT
-option.
+option that's available when Kerberos is used.
 .Pp
 Valid arguments for the encrypt command are as follows:
 .Bl -tag -width Ar
