Small nits from pjanzen.

--- a/usr.bin/rlogin/rlogin.1
+++ b/usr.bin/rlogin/rlogin.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rlogin.1,v 1.9 2001/06/23 22:14:30 hin Exp $
+.\"	$OpenBSD: rlogin.1,v 1.10 2001/06/23 23:15:37 hin Exp $
 .\"	$NetBSD: rlogin.1,v 1.4 1995/08/18 15:07:35 pk Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1993
@@ -194,6 +194,6 @@ in the near future.
 More of the environment should be propagated.
 .Pp
 .Nm
-does currently not support encryption of the datastream when Kerberos
+does not currently support encryption of the datastream when Kerberos
 authentication is used.
 
