--- a/usr.bin/rsh/rsh.1
+++ b/usr.bin/rsh/rsh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rsh.1,v 1.9 2001/06/23 22:14:28 hin Exp $
+.\"	$OpenBSD: rsh.1,v 1.10 2001/06/23 23:15:37 hin Exp $
 .\"
 .\" Copyright (c) 1983, 1990 The Regents of the University of California.
 .\" All rights reserved.
@@ -178,5 +178,5 @@ process only; this is arguably wrong, but currently hard to fix for reasons
 too complicated to explain here.
 .Pp
 .Nm
-does currently not support encryption of the datastream when Kerberos
+does not currently support encryption of the datastream when Kerberos
 authentication is used.
