--- a/libexec/rlogind/rlogind.8
+++ b/libexec/rlogind/rlogind.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rlogind.8,v 1.8 2001/06/23 22:14:31 hin Exp $
+.\"	$OpenBSD: rlogind.8,v 1.9 2001/06/23 23:15:38 hin Exp $
 .\" Copyright (c) 1983, 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -169,5 +169,5 @@ of each client machine and the connecting medium.
 A more extensible protocol should be used.
 .Pp
 .Nm
-does currently not support encryption of the datastream when Kerberos
+does not currently support encryption of the datastream when Kerberos
 authentication is used.
