--- a/libexec/rshd/rshd.8
+++ b/libexec/rshd/rshd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rshd.8,v 1.11 2001/06/23 22:14:29 hin Exp $
+.\"	$OpenBSD: rshd.8,v 1.12 2001/06/23 23:15:37 hin Exp $
 .\" Copyright (c) 1983, 1989, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -225,7 +225,7 @@ or
 should be used instead.
 .Pp
 .Nm
-does currently not support encryption of the datastream when Kerberos
+does not currently support encryption of the datastream when Kerberos
 authentication is used.
 .Pp
 A more extensible protocol (such as
