typos and spelling fixes; from jsyn@nthought.com

--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.36 2001/06/03 14:42:44 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.37 2001/06/24 07:30:29 pvalchev Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -297,7 +297,7 @@ Comment used for the package, and in the INDEX.
 Comment used for sub package foo in a multi-package set up.
 .It Ev COMMENT-vanilla
 Comment used for a flavored package, if the non-flavored comment is
-unappropriate.
+inappropriate.
 .It Ev COMMENT-foo-vanilla
 Comment used for a sub-, flavored package.
 .It Ev CONFIGURE_ARGS
@@ -367,7 +367,7 @@ Defaults to
 Override if distfiles are stored elsewhere.
 Always use
 .Ev FULLDISTDIR
-to refer to ports's distfiles location, as it takes an eventual
+to refer to ports' distfiles location, as it takes an eventual
 .Ev DIST_SUBDIR
 into account.
 .It Ev DISTFILES
