--- a/share/man/man5/passwd.5
+++ b/share/man/man5/passwd.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: passwd.5,v 1.18 2001/03/08 15:10:05 todd Exp $
+.\"	$OpenBSD: passwd.5,v 1.19 2001/06/24 07:30:29 pvalchev Exp $
 .\"	$NetBSD: passwd.5,v 1.4 1995/07/28 06:46:05 phil Exp $
 .\"
 .\" Copyright (c) 1988, 1991, 1993
@@ -76,7 +76,7 @@ User's home directory.
 User's login shell.
 .El
 .Pp
-The publicaly-readable
+The publicly-readable
 .Nm passwd
 file is generated from the
 .Nm master.passwd
