--- a/lib/libc_r/man/pthread_create.3
+++ b/lib/libc_r/man/pthread_create.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pthread_create.3,v 1.6 2000/01/06 06:19:18 d Exp $
+.\" $OpenBSD: pthread_create.3,v 1.7 2001/06/24 18:17:30 jasoni Exp $
 .\" Copyright (c) 1996 John Birrell <jb@cimlogic.com.au>.
 .\" All rights reserved.
 .\"
@@ -84,7 +84,7 @@ The signal mask is inherited from the creating thread.
 The set of signals pending for the new thread is empty.
 .El
 .Sh RETURN VALUES
-If successful,  the
+If successful, the
 .Fn pthread_create
 function will return zero. Otherwise an error number will be returned to
 indicate the error.
