--- a/lib/libc_r/man/pthread_attr_setstacksize.3
+++ b/lib/libc_r/man/pthread_attr_setstacksize.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pthread_attr_setstacksize.3,v 1.2 2000/04/12 21:48:02 aaron Exp $
+.\" $OpenBSD: pthread_attr_setstacksize.3,v 1.3 2001/06/24 18:17:30 jasoni Exp $
 .\" Manual page derived from TOG's UNIX98 documentation.
 .Dd January 6, 2000
 .Dt PTHREAD_ATTR_SETSTACKSIZE 3
@@ -28,7 +28,7 @@ object.
 The
 .Va stacksize
 attribute defines the minimum stack size (in bytes)
-allocated for the created threads stack.
+allocated for the created thread's stack.
 .Sh RETURN VALUE
 Upon successful completion,
 .Fn pthread_attr_setstacksize
