--- a/lib/libc_r/man/pthread_cancel.3
+++ b/lib/libc_r/man/pthread_cancel.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pthread_cancel.3,v 1.6 2000/02/10 11:45:35 d Exp $
+.\" $OpenBSD: pthread_cancel.3,v 1.7 2001/06/24 18:17:30 jasoni Exp $
 .Dd January 17, 1999
 .Dt PTHREAD_CANCEL 3
 .Os
@@ -45,7 +45,7 @@ expands to a constant expression of type
 whose value matches no pointer to an object in memory nor the value
 .Dv NULL .
 .Sh RETURN VALUES
-If successful,  the
+If successful, the
 .Fn pthread_cancel
 functions will return zero. Otherwise an error number will be returned to
 indicate the error.
