--- a/share/man/man5/moduli.5
+++ b/share/man/man5/moduli.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: moduli.5,v 1.2 2001/06/24 18:45:35 itojun Exp $
+.\" $OpenBSD: moduli.5,v 1.3 2001/06/24 18:50:52 provos Exp $
 .\"
 .\" Copyright 1997, 2000 William Allen Simpson <wsimpson@greendragon.com>
 .\" All rights reserved.
@@ -154,9 +154,4 @@ without completely disqualifying older moduli.
 .Sh SEE ALSO
 .Xr photurisd 8 ,
 .Xr sshd 8
-.Sh HISTORY
-The
-.Nm
-file appeared in
-.Ox 2.8 .
 
