--- a/share/man/man4/inet6.4
+++ b/share/man/man4/inet6.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: inet6.4,v 1.21 2001/06/23 05:57:05 deraadt Exp $
+.\"	$OpenBSD: inet6.4,v 1.22 2001/06/24 19:42:23 itojun Exp $
 .\"	$KAME: inet6.4,v 1.19 2000/11/24 10:13:18 itojun Exp $
 .\"
 .\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -148,7 +148,11 @@ socket, kernel memory accesses via
 and some other occasions.
 HOWEVER, users should never use the embedded form.
 For details please consult
-.Pa sys/netinet6/IMPLEMENTATION .
+.Pa http://www.kame.net/dev/cvsweb.cgi/kame/IMPLEMENTATION .
+Note that the above URL describes the situation with the latest KAME tree,
+not the
+.Ox
+tree.
 .Sh PROTOCOLS
 The
 .Nm
