--- a/share/man/man4/wi.4
+++ b/share/man/man4/wi.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: wi.4,v 1.9 2001/06/07 23:53:54 millert Exp $
+.\"	$OpenBSD: wi.4,v 1.10 2001/06/24 19:59:03 millert Exp $
 .\"
 .\" Copyright (c) 1997, 1998, 1999
 .\"	Bill Paul <wpaul@ctr.columbia.edu>. All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\"	$FreeBSD: wi.4,v 1.3 1999/05/22 16:12:43 wpaul Exp $
 .\"
-.Dd June 7, 2001
+.Dd June 24, 2001
 .Dt WI 4
 .Os
 .Sh NAME
@@ -120,15 +120,21 @@ utility to set your keys.
 .Pp
 By default, the
 .Nm
-driver configures the WaveLAN card for ad-hoc operation.
-In this mode, the nwid is ignored and stations can communicate among
+driver configures the WaveLAN card for BSS operation (aka infrastructure
+mode).
+This mode requires the use of an access point (base station).
+.br
+The
+.Nm
+driver also supports an ad-hoc (point-to-point) mode where
+the nwid is ignored and stations can communicate among
 each other without the aid of an access point.
 Note that this mode is not in the IEEE 802.11 specification and the
 driver may not be able to interoperate with other vendor's cards
 while in ad-hoc mode.
 .Pp
 For more information on configuring this device, see
-.Xr ifconfig 8
+.Xr ifconfig 8 .
 .Sh DIAGNOSTICS
 .Bl -diag
 .It "wi%d: init failed"
@@ -166,9 +172,11 @@ driver was written by Bill Paul <wpaul@ctr.columbia.edu> and ported to
 .Ox
 by Niklas Hallqvist <niklas@appli.se>.
 .Sh CAVEATS
-Lucent WaveLAN cards are usually default to channel 3 for operation,
-while some non-Lucent cards have different default channel (11 for
-Addtron cards, for example). See
+The original Lucent WaveLAN cards usually default to channel 3;
+newer cards use channel 10 by default.
+Non-Lucent cards vary, for instance the Addtron cards use channel
+11 by default.
+See
 .Xr wicontrol 8
 for information on how to change the channel.
 .Sh BUGS
