--- a/share/man/man9/style.9
+++ b/share/man/man9/style.9
@@ -22,7 +22,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: style.9,v 1.17 2001/06/18 15:17:04 millert Exp $
+.\"	$OpenBSD: style.9,v 1.18 2001/06/24 22:03:03 millert Exp $
 .\"
 .Dd June 18, 2001
 .Dt STYLE 9
@@ -133,18 +133,18 @@ macro in new code is discouraged, although modifications to existing
 files should be consistent with that file's conventions.
 Only the kernel has a name associated with the types; i.e., in the kernel use:
 .Bd -literal -offset 0i
-void	function (int a);
+void	function(int a);
 .Ed
 and in user land use:
 .Bd -literal -offset 0i
-void	function (int);
+void	function(int);
 .Ed
 .Pp
 Prototypes may have an extra space after a tab to enable function names
 to line up:
 .Bd -literal -offset 0i
-static char	*function __P((int, const char *));
-static void	 usage __P((void));
+static char	*function(int, const char *);
+static void	 usage(void);
 .Ed
 .Pp
 Use
@@ -153,7 +153,7 @@ from
 .Pa Aq sys/cdefs.h
 for functions that don't return, e.g.,
 .Bd -literal -offset 0i
-__dead void	abort __P((void));
+__dead void	abort(void);
 .Ed
 .Pp
 In header files, put function prototypes within
